# WinkLink

./: .gitignore  Cargo.toml  platformio.ini  sdkconfig.defaults
include/: tft_config.h
src/: boot.rs  crash.cpp  crash.hpp  dapup.cpp  dapup.hpp  device.rs  deviceinfo.hpp  drawing.cpp  drawing.hpp  driver.rs  error.rs  iamsingle.rs  lib.rs  loop.cpp  loop.hpp  main.cpp  main.rs  nvs.cpp  nvs.hpp  nvs.rs  other.cpp  other.hpp  setup.cpp  setup.hpp  wifi.rs
src/setup/: mod.rs
src/ui/: blockedDeviceManager.cpp  blockedDeviceManager.hpp  deviceMenu.cpp  deviceMenu.hpp  friendRequest.cpp  friendRequest.hpp  friendUI.cpp  friendUI.hpp
