[package]
name = "wink-link"
version = "0.1.0"
authors = ["tk <4tkbytes@pm.me>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "wink-link"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-graphics = "0.8.1"
esp-idf-hal = "0.45.2"
embedded-hal = "1.0.0"
mipidsi = "0.9.0"
tinybmp = "0.6.0"
anyhow = "1.0.98"

[build-dependencies]
embuild = "0.33"
